# raytracer

./: .gitignore  CMakeLists.txt  README.org
src/: camera.hpp  colour.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  main.cpp  material.hpp  ray.hpp  sphere.hpp  util.hpp  vec3.hpp
